# libfilediff

./: .gitignore  README.md  meson.build
src/: main.cpp  meson.build
